Archive2/d9/84431d2acc008a/output
main.cpp: In function 'int main()':
main.cpp:22:42: error: conversion from 'indices<0ul, 1ul, 2ul>::type {aka indices<0ul, 1ul, 2ul>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = build_indices<3>::type{};
                                          ^
main.cpp:23:51: error: conversion from 'indices<2ul, 1ul, 0ul>::type {aka indices<2ul, 1ul, 0ul>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} r_ = build_reverse_indices<3>::type{};
                                                   ^
